@@ -1,4 +1,4 @@
-DIST zsh-completions-0.7.0.tar.gz 116032 SHA256 f69217d77366f40393ff361acdf53fe7bdaf8039b94b3090bfa08b029ad820aa SHA512 132871e9700c1eeade2e6af6d00c37b0af5b84a65a1bc616fa870a6d2750d04df094536bafe52331fe96361b5ec33a4e2f1d2ca5ba9193c3dec22303df881de8 WHIRLPOOL 21990ce1bcad60b77130512a87dcd6a2f91f04e872f1572b8c27124087315557dd2e908857313a3c003a91c0db5420c09f29f8595a71fa23e9cebc52e10e2cce
-EBUILD zsh-completions-0.7.0.ebuild 877 SHA256 839b16cb1b0086e312cadf1ba5352bdf29f97a58370473ecbd1e9061ff562789 SHA512 77e9c5154beca93e0549e904c829ef837d88746d0ad026b9b8ef292440fb5b1aed9d19756d8dbf961be3a22848e357ca53e9dbddd29d20719280ecf88d99ee73 WHIRLPOOL 150a30bb08c6981232cb2362e97f818d2e9f43479b92e2c7d825b24a1f83cb66cb3077d93d274665bdf7d2c649d1b99b83ec08b163176c7bab7dd40b8338b2d8
-MISC ChangeLog 574 SHA256 fd240f95f9852b873a007ce1b856bd95a2f28ac6427be6e0a02a0ef19ce66744 SHA512 c2d33b03eb839b28f4b2b08c06714151b575b6e1313948ab4a3e5693a5f4ab5855dbefaf1dd6199043e5458c6653ada455bffd831a49ffb838b53ba6e5058d2b WHIRLPOOL ebced1fbf872672ed19f9e9a971f0491cbbc5684897de1de518db5ef0ab1f6e0c0fd59b592f36c8c93a292b2e83f9658133b7a3c3300fe5307f0bcb342bd4cee
+DIST zsh-completions-0.8.0.tar.gz 122733 SHA256 92bf4bd97c92bbc8d17ae9899a77cf5598db16c25c6adca1fa4f4529a28e4364 SHA512 7d9a3af8afbe6a1cc65a9dbc1034d9f946efbb381bfb0b86cee4c31b7efd5c55e3646dbf61423da77239484c2234bded65bb05d28bfd6241ef6734df4400b3d9 WHIRLPOOL a93f4d2728d6f066ad498e83e6d125711c8c7fb1ba9f7899eab734fbc810016e7a8da2134a2aa800d43ede01a540db1a153728ad8717f22dc8ea73a18c33dc48
+EBUILD zsh-completions-0.8.0.ebuild 1019 SHA256 3517aa0aa527e54eb86ebf0b29549f11acb5d03c4b4fdd2217244131a78134f6 SHA512 f4ab8b7df68c03cd92e64118569ffc712af8153b1d757234e1eee0ca2226d0a4d71035e807ea9537cd7a08565a6a49d9a02ca23ab9bdc66483e320e6e7124200 WHIRLPOOL 917d2bb270d37b2462d412d023ca8a3e010548308c70396f43cf2a2aaa573aa69029384283f5da8099ac1377da77854db48498e04930ec7a6645d3ad591bd55b
+MISC ChangeLog 772 SHA256 2f7eee9b61d319a4cca90c2e373c1f3610a12a9b42370ffdbb2ebbc1f55f53a3 SHA512 51d9cbb8f1b9924913af011dbc44a12a1c0c7a2a1693bf19549bab28404c63b0895072d0f70dacb2eb8101bc76c2128e8b98dc61ff981f527a4b26917be3f0ca WHIRLPOOL d69b9639494f98e42b1910668c3421d58568e5761de07b2d717425a6c49e22fc49c4b603c59a374b976795aba7080eb9946209a16f8888241a78b0ca194c7779
 MISC metadata.xml 354 SHA256 6d55476e655a8191c0888ce36e42a6e8e256123ba9061df184ffab374208fe8b SHA512 601e945e36e89326d3f984ca1aaafb480b0107da5d38a0bbca9109d24efb46e8241d146d04504b0b763eb6b58ce29766c2c34b3782d5dabf0d82ddbb6ce710e9 WHIRLPOOL 845df63d267fc076831ec01906e75908fe93bece5de0c29b3271a18d723c32aee4772d7717403c74aafac5d4b071c569a98212a89aaf8a5805781df90e61ec24
