@@ -1,3 +1,9 @@
+*zsh-completions-0.8.0 (05 Feb 2013)
+
+  05 Feb 2013; Manuel Rueger (mrueg) gentoo@rueg.eu
+  +zsh-completions-0.8.0.ebuild, -zsh-completions-0.7.0.ebuild:
+  app-shells/zsh-completions: Version bump
+
   08 Oct 2012; Manuel Rueger (mrueg) gentoo@rueg.eu
   zsh-completions-0.7.0.ebuild:
   app-shells/zsh-completions: Fix typo
